Copy Thumbnail Fixed. Only true needed to be added to the inputstream